WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255133
Regression(
259658@main
) Geolocation permission prompt is no longer showing in modal view
https://bugs.webkit.org/show_bug.cgi?id=255133
Summary
Regression(259658@main) Geolocation permission prompt is no longer showing in...
Chris Dumez
Reported
2023-04-06 18:10:26 PDT
Geolocation permission prompt is no longer showing in modal view after
259658@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-04-06 18:10:39 PDT
<
rdar://107352115
>
Chris Dumez
Comment 2
2023-04-06 18:13:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12489
EWS
Comment 3
2023-04-06 19:20:54 PDT
Committed
262697@main
(14f467660549): <
https://commits.webkit.org/262697@main
> Reviewed commits have been landed. Closing PR #12489 and removing active labels.
Bogdan Brinza
Comment 4
2023-04-25 16:01:12 PDT
Thank you for working on the fix! Salesforce customers have reported 5 cases to us that we rooted to this issues, some are escalating rapidly. Do you have any insights for when this fix makes it into public iOS release so we could share with affected customers?
Chris Dumez
Comment 5
2023-04-25 19:05:29 PDT
***
Bug 255936
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug