Cherry-pick 14f467660549. rdar://problem/107352115

Regression(259658@main) Geolocation permission prompt is no longer showing in modal view
    https://bugs.webkit.org/show_bug.cgi?id=255133
    rdar://107352115

    Reviewed by Wenson Hsieh and Tim Horton.

    Use the same view controller to present the prompt as the UIWebView code used to.
    I have verified locally that this fixes the issue.

    * Source/WebKit/UIProcess/ios/WKWebGeolocationPolicyDeciderIOS.mm:
    (-[WKWebGeolocationPolicyDecider _executeNextChallenge]):

    Canonical link: https://commits.webkit.org/262697@main

Identifier: 259548.664@safari-7615.2.9.12-branch